kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpro-app
  labels:  
    app: vpro-app

spec: 
  selector: 
    matchLabels:
      app: vproapp
  replicas: 1
  template:
    metadata:
      labels:
        app: vproapp
    spec: 
      containers:
      - name: app-containers
        image: vprocontainers/vprofileapp

        ports:
        - name: app-container
          containerPort: 8080
