kubedefs/mcdep.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: vpromc
  labels:
    app: vpromc
spec:
  selector:
    matchLabels:
      app: vpro-mc 
  replicas: 1
  template:
    metadata:
      labels:
        app: vpro-mc

    spec: 
      containers:
      - name: vpro-memcache container 
        image: memcached

        ports:
        - name: memcache port 
          containerPort: 11211
