kubedefs/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpro-rmq
  labels:
    app: vpr-rmq
spec:
  selector:
    matchLabels:
      app: rmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rmq
    spec:
      containers:
      - name: rabbitmq-container
        image: rabbitmq

        ports:
        - name: rabbitmq-port
          containerPort: 5672
