kubedefs/appservice.yaml
apiVersion: v1
kind: Service   
metadata:
  name: app-service

spec:
  type: ClusterIP
  ports:
  - targetport: app-container
    port: 8080

  selector:
    app: vproapp
