kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-service

spec:
  type: ClusterIP
  ports: 
  - port: 11211
    targetPort: vprocache01

  selector:
    app: vpro-mc
