kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01

spec:
  type: ClusterIP
  ports:
  - targetPort: rabbitmq-port
    port: 5672

  selector:
    app: rmq
