kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: app-service
            port:
              number: 8080
